# open-elevation

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  download_alos.py  download_aster.py  main.py  pyproject.toml  requirements.txt  test_api.sh
src/open_elevation/: __init__.py  config.py  exceptions.py  main.py
src/open_elevation/download/: __init__.py  alos.py  aster.py
src/open_elevation/elevation/: __init__.py  routes.py  schemas.py  service.py
tests/: conftest.py
tests/elevation/: test_integration.py  test_routes.py  test_schemas.py  test_service.py
tests/fixtures/: test_elevation.tif
