[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-elevation"
version = "0.1.0"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "rasterio>=1.3.0",
    "Rtree>=1.1.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
download = ["requests>=2.31.0"]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "SIM", "UP", "N", "S", "A", "C4", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["rasterio", "rasterio.*", "rtree", "rtree.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
